--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,46 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Marvel App
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col size ="6" *ngFor = "let comic of comics; let $index =index">
+        <ion-card>
+          <ion-item>
+            <ion-img src="{{comic.thumbnail.path.concat('.',comic.thumbnail.extension.toString())}}"></ion-img>
+          </ion-item>
+          <ion-item>
+            <ion-label>{{comic.title}}</ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-label>{{comic.dates[0].date.substring(0,10)}}</ion-label>
+          </ion-item>
+          <ion-card-content>
+            <ion-row>
+              <ion-col size ="6">
+                <ion-button (click)= "increaseLikes(comic)" size="small">
+                  <ion-icon name="thumbs-up-outline"></ion-icon>
+                </ion-button>
+              </ion-col>
+              <ion-col size ="6">
+              <ion-button (click)= "decreaseLikes(comic)" size="small"> 
+                <ion-icon name="thumbs-down-outline"></ion-icon>
+              </ion-button>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col>
+                {{'Likes: '+ comic.likes}}
+              </ion-col>
+            </ion-row>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
