--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,39 +7,11 @@
 </ion-header>
 
 <ion-content>
-  <ion-grid>
-    <ion-row>
+    <ion-grid>
+    <ion-row >
       <ion-col size ="6" *ngFor = "let comic of comics; let $index =index">
-        <ion-card>
-          <ion-item>
-            <ion-img src="{{comic.thumbnail.path.concat('.',comic.thumbnail.extension.toString())}}"></ion-img>
-          </ion-item>
-          <ion-item>
-            <ion-label>{{comic.title}}</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>{{comic.dates[0].date.substring(0,10)}}</ion-label>
-          </ion-item>
-          <ion-card-content>
-            <ion-row>
-              <ion-col size ="6">
-                <ion-button (click)= "increaseLikes(comic)" size="small">
-                  <ion-icon name="thumbs-up-outline"></ion-icon>
-                </ion-button>
-              </ion-col>
-              <ion-col size ="6">
-              <ion-button (click)= "decreaseLikes(comic)" size="small"> 
-                <ion-icon name="thumbs-down-outline"></ion-icon>
-              </ion-button>
-              </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col>
-                {{'Likes: '+ comic.likes}}
-              </ion-col>
-            </ion-row>
-          </ion-card-content>
-        </ion-card>
+        <app-comic-card [comic]= "comic">
+        </app-comic-card>
       </ion-col>
     </ion-row>
   </ion-grid>
